--- a/src/Translation/locales/zh.json
+++ b/src/Translation/locales/zh.json
@@ -116,6 +116,7 @@
     "own_address_warning": "那是你自己的地址！",
     "owned_by": "拥有",
     "owned_by_link": "{address_link} 소유",
+    "owner_address_warning": "那已经是主人了！",
     "paid_at": "付费",
     "parcels": "地块",
     "profile": "我的虚拟土地",
