--- a/src/Translation/locales/es.json
+++ b/src/Translation/locales/es.json
@@ -58,6 +58,7 @@
     "delete": "Eliminar Estado",
     "delete_desc": "Vas a eliminar la propiedad {name}",
     "edit_parcels": "Editar paquetes",
+    "empty_estate": "La propiedad {name} ha sido eliminada",
     "parcels": "Parcelas incluidas",
     "pending_tx": "Esta propiedad"
   },
