fix: rename delete to dissolve

--- a/src/Translation/locales/en.json
+++ b/src/Translation/locales/en.json
@@ -55,10 +55,10 @@
       "You have set a wrong derivation path for your wallet. Your derivation path must follow pattern 44'/60|61'/x'/n"
   },
   "estate_detail": {
-    "delete": "Delete Estate",
-    "delete_desc": "You are going to delete the estate {name}",
+    "dissolve": "Dissolve Estate",
+    "dissolve_desc": "You are going to dissolve the estate {name}",
     "edit_parcels": "Edit Parcels",
-    "empty_estate": "The estate {name} has been deleted",
+    "empty_estate": "The estate {name} has been dissolved",
     "parcels": "Parcels included",
     "pending_tx": "This estate"
   },
@@ -369,9 +369,9 @@
     "create_estate": "You created the estate {name}",
     "create_mortgage":
       "You requested a Mortgage to buy the parcel {parcel_link}",
-    "delete_estate": "You deleted the estate {name}",
     "disapproved":
       "You unauthorized the {marketplace_contract_link} to operate MANA on your behalf",
+    "dissolve_estate": "You dissolved the estate {name}",
     "edit":
       "You edited {parcel_link} with the name \"{name}\" and description \"{description}\"",
     "edit_estate_metadata":
