--- a/src/Translation/locales/ja.json
+++ b/src/Translation/locales/ja.json
@@ -55,10 +55,10 @@
       "あなたのウォレットは、不適合な導出関数をしています。導出関数は44'/60|61'/x'/n型でなければいけません。"
   },
   "estate_detail": {
-    "delete": "不動産を削除",
-    "delete_desc": "あなたは不動産{name}を削除しようとしています。",
+    "dissolve": "ディゾルブエステート",
+    "dissolve_desc": "あなたは不動産{name}を解散するつもりです",
     "edit_parcels": "パーセルの編集",
-    "empty_estate": "不動産{name}が削除されました",
+    "empty_estate": "不動産{name}が解散しました",
     "parcels": "パーセルを含む",
     "pending_tx": "この不動産"
   },
@@ -370,9 +370,9 @@
     "create_estate": "あなたは不動産{name}を作成しました",
     "create_mortgage":
       "パーセル{parcel_link}を購入するのに担保を申請しました。",
-    "delete_estate": "あなたは不動産{name}を削除しました",
     "disapproved":
       "あなたは、マーケット上でMANAを使用することを{marketplace_contract_link}で承認していません。",
+    "dissolve_estate": "あなたは不動産{name}を解散しました",
     "edit":
       "{parcel_link}の名称を\"{name}\"に、説明文を\"{description}\"に変更しました。",
     "edit_estate_metadata":
