--- a/src/Translation/locales/fr.json
+++ b/src/Translation/locales/fr.json
@@ -56,9 +56,10 @@
       "Vous avez défini un mauvais chemin de dérivation pour votre portefeuille. Votre chemin de dérivation doit suivre le modèle 44 '/ 60 | 61' / x '/ n"
   },
   "estate_detail": {
-    "delete": "Supprimer la succession",
-    "delete_desc": "Vous allez supprimer le domaine {name}",
+    "dissolve": "Dissoudre le domaine",
+    "dissolve_desc": "Vous allez dissoudre le domaine {name}",
     "edit_parcels": "Modifier les colis",
+    "empty_estate": "Le domaine {name} a été dissous",
     "parcels": "Colis inclus",
     "pending_tx": "Ce domaine"
   },
@@ -379,9 +380,9 @@
     "create_estate": "Vous avez créé le domaine {name}",
     "create_mortgage":
       "Vous avez demandé une hypothèque pour acheter le colis {parcel_link}",
-    "delete_estate": "Vous avez supprimé le domaine {name}",
     "disapproved":
       "Vous avez autorisé le {marketplace_contract_link} à transférer des fonds en votre nom",
+    "dissolve_estate": "Vous avez dissous le domaine {name}",
     "edit":
       "Vous avez mis à jour {parcel_link} avec le nom \"{name}\" et la description \"{description}\"",
     "edit_estate_metadata":
