--- a/src/Translation/locales/zh.json
+++ b/src/Translation/locales/zh.json
@@ -50,12 +50,14 @@
     "proposal": "提案"
   },
   "derivation_path": {
-    "invalid": "您为钱包设置了错误的派生路径。 您的派生路径必须遵循模式 44'/60|61'/x'/n"
+    "invalid":
+      "您为钱包设置了错误的派生路径。 您的派生路径必须遵循模式 44'/60|61'/x'/n"
   },
   "estate_detail": {
-    "delete": "删除地产",
-    "delete_desc": "您要删除地产{name}",
+    "dissolve": "解散遗产",
+    "dissolve_desc": "你将解散庄园{name}",
     "edit_parcels": "编辑地块",
+    "empty_estate": "庄园{name}已经解散",
     "parcels": "包括地块",
     "pending_tx": "地产"
   },
@@ -192,12 +194,15 @@
     "payable": "应付",
     "payable_placeholder": "应付天数",
     "pending_tx": "按揭",
-    "please_authorize_MANA": "请转到{settings_link}并授权Mortgage Helper合同代表您运营MANA",
-    "please_authorize_RCN": "请转到{settings_link}并授权抵押贷款经理合同代表您运营RCN",
+    "please_authorize_MANA":
+      "请转到{settings_link}并授权Mortgage Helper合同代表您运营MANA",
+    "please_authorize_RCN":
+      "请转到{settings_link}并授权抵押贷款经理合同代表您运营RCN",
     "punitory_rate": "惩罚性利率",
     "punitory_rate_placeholder": "惩罚性利率",
     "request": "申请抵押",
-    "request_land": "您将为 {parcel_name} 地块以 {parcel_price} 的价格申请抵押贷款",
+    "request_land":
+      "您将为 {parcel_name} 地块以 {parcel_price} 的价格申请抵押贷款",
     "requested": "已申请"
   },
   "parcel": {
@@ -279,7 +284,8 @@
     "expiration": "到期时间",
     "expiration_placeholder": "待售截止日期",
     "list_land": "地块上架出售",
-    "please_authorize": "您需要在设置页面{settings_link}授权委托虚拟市场以您的名义操作土地交易，然后才能将其上架出售。",
+    "please_authorize":
+      "您需要在设置页面{settings_link}授权委托虚拟市场以您的名义操作土地交易，然后才能将其上架出售。",
     "price": "价格",
     "price_placeholder": "此地块的 MANA 价格",
     "set_land_price": "为 {parcel_name} 设置价格和截止日期"
@@ -314,8 +320,10 @@
     "mortgage_manager_contract": "抵押管理合约",
     "pending_tx": "您有待处理的交易",
     "unauthorize_land_check": "取消勾选取消授权市场合约使用虚拟土地",
-    "you_approved_mortgage_mana": "您已授权{mortgage_contract_link}代表您操作 MANA",
-    "you_approved_mortgage_rcn": "您已授权{mortgage_contract_link}代表您运营 RCN",
+    "you_approved_mortgage_mana":
+      "您已授权{mortgage_contract_link}代表您操作 MANA",
+    "you_approved_mortgage_rcn":
+      "您已授权{mortgage_contract_link}代表您运营 RCN",
     "you_authorized": "您已授权{marketplace_contract_link}以您的名义操作土地"
   },
   "sign_in": {
@@ -323,7 +331,8 @@
     "get_started": "开始使用",
     "intro": "首先，您需要一个安全的地方来保存所有的LAND。",
     "options": {
-      "desktop": "您可以使用{metamask_link}扩展名或像{ledger_nano_link}这样的硬件钱包。",
+      "desktop":
+        "您可以使用{metamask_link}扩展名或像{ledger_nano_link}这样的硬件钱包。",
       "mobile": "您可以使用移动浏览器，如{toshi_link}或{imtoken_link}。"
     }
   },
@@ -337,10 +346,11 @@
     "claim_mortgage_resolution": "您认领了 {parcel_link}",
     "create_estate": "您创建了地产 {name}",
     "create_mortgage": "您要求抵押以购买地块 {parcel_link}",
-    "delete_estate": "您删除了地产{name}",
     "disapproved": "您未授权{marketplace_contract_link}以您的名义操作 MANA",
+    "dissolve_estate": "你解散了庄园{name}",
     "edit": "您编辑了{parcel_link}地块的名称\"{name}\"和描述\"{description}\"",
-    "edit_estate_metadata": "您编辑了地产{estate_id}，名称为“{name}”，描述为“{description}”",
+    "edit_estate_metadata":
+      "您编辑了地产{estate_id}，名称为“{name}”，描述为“{description}”",
     "edit_estate_parcels_added": "您将 {amount} 地块添加到地产 {name}",
     "edit_estate_parcels_removed": "您从地产 {name} 中删除了 {amount} 地块",
     "manage": "您授权{address_link}更新{parcel_link}上的内容",
@@ -357,7 +367,8 @@
       "please_confirm": "请确认交易"
     },
     "parcel": {
-      "still_pending": "{parcel_name} 仍然有 {transactions_count} 个待处理的交易。"
+      "still_pending":
+        "{parcel_name} 仍然有 {transactions_count} 个待处理的交易。"
     },
     "see_activity": "要查看您的交易记录，请访问 {activity_link}。",
     "text": {
