--- a/src/Translation/locales/en.json
+++ b/src/Translation/locales/en.json
@@ -59,8 +59,16 @@
     "dissolve_desc": "You are going to dissolve the estate {name}",
     "edit_parcels": "Edit Parcels",
     "empty_estate": "The estate {name} has been dissolved",
+    "maximum_parcels_message":
+      "If you add or removes more than {max} parcels in a single transaction it may run out of gas. You can submit this transaction and then add or remove more parcels in a subsequent transaction by editing the estate.",
+    "maximum_parcels_title": "You reached the maximum parcels per transaction",
     "parcels": "Parcels included",
     "pending_tx": "This estate"
+  },
+  "estate_dissolve": {
+    "too_big": "This estate is too big",
+    "too_big_desc":
+      "When an estate has over {max} parcels a transaction to dissolve it may run out of gas. You should remove parcels by editing the estate and dissolve it when it has {max} parcels or less."
   },
   "estate_edit": {
     "description": "Description",
