--- a/src/Translation/locales/ja.json
+++ b/src/Translation/locales/ja.json
@@ -20,8 +20,8 @@
     "on_sale": "販売中: ",
     "owner": "所有者: {owner}",
     "road": "道路",
-    "your_estate": "あなたの不動産",
-    "your_parcel": "あなたのパーセル"
+    "your_estate": "あなたのエステート",
+    "your_parcel": "あなたの区画"
   },
   "buy_mana": {
     "action": "もっと購入する",
@@ -36,7 +36,7 @@
     "title": "ETHからMANAへ変換"
   },
   "color_key": {
-    "contribution": "貢献",
+    "contribution": "貢献用",
     "district": "地区",
     "loading": "読込み中",
     "on_sale": "販売中",
@@ -55,35 +55,35 @@
       "あなたのウォレットは、不適合な導出関数をしています。導出関数は44'/60|61'/x'/n型でなければいけません。"
   },
   "estate_detail": {
-    "dissolve": "ディゾルブエステート",
-    "dissolve_desc": "あなたは不動産{name}を解散するつもりです",
-    "edit_parcels": "パーセルの編集",
-    "empty_estate": "不動産{name}が解散しました",
+    "dissolve": "エステートを解散する",
+    "dissolve_desc": "あなたはエステート{name}を解散しようとしています。",
+    "edit_parcels": "区画の編集",
+    "empty_estate": "エステート{name}を解散しました。",
     "maximum_parcels_message":
-      "1回のトランザクションで{max}パーセルを追加または削除すると、ガスがなくなる可能性があります。",
+      "1回のトランザクションで{max}区画を追加または削除すると、ガスがなくなる可能性があります。",
     "maximum_parcels_title":
       "あなたはトランザクションごとに最大の小包に達しました",
-    "parcels": "パーセルを含む",
-    "pending_tx": "この不動産"
+    "parcels": "次の区画を含む",
+    "pending_tx": "このエステート"
   },
   "estate_dissolve": {
-    "too_big": "この不動産は大きすぎます",
+    "too_big": "このエステートは大きすぎます",
     "too_big_desc":
-      "不動産が{max}小包を超過すると、解散する取引にガスがなくなる可能性があります。"
+      "エステートが{max}区画を超過すると、解散する取引にガスがなくなる可能性があります。"
   },
   "estate_edit": {
     "description": "説明",
-    "edit_estate": "不動産を編集",
+    "edit_estate": "エステートを編集",
     "name": "名称",
-    "subtitle": "あなたの不動産のパーセルの名称と説明の設定・編集ができます。"
+    "subtitle": "あなたのエステートの区画の名称と説明の設定・編集ができます。"
   },
   "estate_select": {
-    "description": "{x},{y}から始まる、隣接したパーセルを選んでください。",
-    "detail": "不動産の詳細",
-    "edit_selection": "地図上のパーセルを選択する",
-    "new_selection": "新しい不動産のパーセルを地図から選択してください。",
+    "description": "隣接した区画を選んでください。",
+    "detail": "エステートの詳細",
+    "edit_selection": "地図上の区画を選択する",
+    "new_selection": "新しいエステートの区画を地図から選択してください。",
     "tx_to_be_send":
-      "トランザクションを{action}したパーセル{parcels}へ送信します。"
+      "トランザクションを{action}した区画{parcels}へ送信します。"
   },
   "footer": {
     "color_key": "カラーガイド",
@@ -114,8 +114,8 @@
     "contributions": "貢献用",
     "created_at": "{date}に作成済み",
     "edit": "編集",
-    "estate": "不動産",
-    "estates": "不動産",
+    "estate": "エステート",
+    "estates": "エステート",
     "expired_at": "{time}に締切済み",
     "expires_in": "締切まであと{time}",
     "expires_in_more_than_years": "締切まであと{years}年以上",
@@ -124,14 +124,14 @@
     "marketplace": "マーケット",
     "mortgage": "担保",
     "mortgages": "担保",
-    "own_address_warning": "それはあなた自身のアドレスです！",
+    "own_address_warning": "これはあなた自身のアドレスです！",
     "owned_by": "所有者",
     "owned_by_link": "所有者：{address_link}",
-    "owner_address_warning": "それはすでに所有者です！",
+    "owner_address_warning": "このアドレスはすでに所有しています！",
     "paid_at": "支払済み",
     "parcels": "パーセル区画",
     "profile": "マイランド",
-    "publications": "公開中のパーセル",
+    "publications": "公開中の区画",
     "recipient_address": "受信者アドレス",
     "remove": "削除する",
     "request": "リクエスト",
@@ -144,8 +144,8 @@
     "sign_in_notice":
       "アクセスするには、こちらで{sign_in_link}サインインする必要があります。",
     "submit": "送信",
-    "the_estate": "不動産",
-    "the_parcel": "小包",
+    "the_estate": "エステート",
+    "the_parcel": "区画",
     "time_left": "残り時間",
     "transfer_irreversible": "転送は元に戻すことができません。",
     "unauthorized": "未認証",
@@ -181,7 +181,7 @@
     "amount": "総額",
     "amount_placeholder": "MANA総額",
     "cancel": "担保をキャンセルする",
-    "claim": "パーセルを請求する",
+    "claim": "区画を請求する",
     "defaulted_in": "デフォルト設定",
     "duration": "有効期間",
     "duration_placeholder": "有効期限日数",
@@ -193,7 +193,7 @@
       "minimum_duration": "有効期限は{minimum}日以上の必要があります。",
       "minimum_interest_rate": "レートは{minimum}以上で設定してください。",
       "minimum_payable": "{minimum}日以上で支払い設定する必要があります。",
-      "parcel_price": "総額はパーセルの価格以下にしなければいけません。"
+      "parcel_price": "総額は区画の価格以下にしなければいけません。"
     },
     "expiration": "有効期限を申請する",
     "expiration_placeholder": "担保の有効期限",
@@ -238,18 +238,18 @@
   "parcel_cancel": {
     "about_to_cancel": "{parcel}の販売をキャンセルしようとしています。",
     "cancel_land": "販売をキャンセル",
-    "not_for_sale": "このパーセル{parcel}は販売されていません。"
+    "not_for_sale": "この区画{parcel}は販売されていません。"
   },
   "parcel_detail": {
     "actions": {
       "cancel": "販売をキャンセル",
-      "create_estate": "不動産を作成する",
+      "create_estate": "エステートを作成する",
       "permissions": "権限",
       "sell": "販売する",
       "transfer": "転送する"
     },
     "description": "説明",
-    "empty_description": "このパーセルに説明文はありません。",
+    "empty_description": "この区画に説明文はありません。",
     "history": {
       "auction": "オークション",
       "event": "イベント",
@@ -286,7 +286,7 @@
   "parcel_manage": {
     "address": "編集者のアドレス",
     "address_permission":
-      "このアドレスの持ち主が指定されたパーセルのコンテンツを更新できるようになります。",
+      "このアドレスの持ち主が指定された区画のコンテンツを更新できるようになります。",
     "give_permission": "{parcel_name}の更新権限を与える.",
     "manage_land": "ランドを管理"
   },
@@ -299,7 +299,7 @@
       "minimum_land_price": "ランドの最低価格は{value}MANAです。"
     },
     "expiration": "有効期限",
-    "expiration_placeholder": "この公開パーセルの有効期限",
+    "expiration_placeholder": "この公開区画の有効期限",
     "list_land": "このランドを販売リストに追加する",
     "please_authorize":
       " 販売リストに追加する前に、{settings_link}にてマーケット上でランドを使用することをマーケットコントラクトで承認して下さい。",
@@ -311,7 +311,7 @@
     "adjacent": "隣接",
     "district": "地区",
     "plaza": "プラザ",
-    "proximity": "{distance}パーセル先",
+    "proximity": "{distance}区画先",
     "road": "道路"
   },
   "profile_page": {
@@ -374,20 +374,20 @@
     "buy_mana": "{mana} MANAを購入しました。",
     "cancel": "{parcel_link}の{publication_link}の公開をキャンセルしました。",
     "cancel_mortgage":
-      "パーセル{parcel_link}購入の為の担保をキャンセルしました。",
+      "区画{parcel_link}購入の為の担保をキャンセルしました。",
     "claim_mortgage_resolution": "{parcel_link}へ請求しました。",
-    "create_estate": "あなたは不動産{name}を作成しました",
+    "create_estate": "あなたはエステート{name}を作成しました",
     "create_mortgage":
-      "パーセル{parcel_link}を購入するのに担保を申請しました。",
+      "区画{parcel_link}を購入するのに担保を申請しました。",
     "disapproved":
       "あなたは、マーケット上でMANAを使用することを{marketplace_contract_link}で承認していません。",
-    "dissolve_estate": "あなたは不動産{name}を解散しました",
+    "dissolve_estate": "エステート{name}を解散しました。",
     "edit":
       "{parcel_link}の名称を\"{name}\"に、説明文を\"{description}\"に変更しました。",
     "edit_estate_metadata":
-      "不動産{estate_id}の名称を\"{name}\"に、説明文を\"{description}\"に変更しました。",
-    "edit_estate_parcels_added": "不動産{name}に{amount}小包を追加しました",
-    "edit_estate_parcels_removed": "不動産{name}から{amount}小包を取り除いた",
+      "エステート{estate_id}の名称を\"{name}\"に、説明文を\"{description}\"に変更しました。",
+    "edit_estate_parcels_added": "エステート{name}に{amount}区画を追加しました",
+    "edit_estate_parcels_removed": "エステート{name}から{amount}区画を取り除いた",
     "manage":
       "{parcel_link}のコンテンツを更新する権限を{address_link}に与えました。",
     "manage_revoked":
@@ -397,7 +397,7 @@
     "mortgage_rcn":
       "{mortgage_contract_link}でRCNを使用することを{action}しました。",
     "pay_mortgage":
-      "パーセル{parcel_link}を購入する担保への一部払いで{amount}MANAを支払いました。",
+      "区画{parcel_link}を購入する担保への一部払いで{amount}MANAを支払いました。",
     "publish": "{parcel_link}を公開しました。",
     "transfer": "{parcel_link}を{owner_link}へ転送しました。",
     "transfer_mana": "{mana}MANAを{address_link}へ転送しました。"
@@ -416,8 +416,8 @@
     }
   },
   "transfer_estate": {
-    "about_to_transfer": "不動産{name}を移転しようとしています。",
-    "transfer_estate": "トランスファーエステート"
+    "about_to_transfer": "あなたはエステート{name}を転送しようとしています。",
+    "transfer_estate": "エステートを転送する"
   },
   "transfer_mana": {
     "action": "転送する",
@@ -429,7 +429,7 @@
     "title": "MANAを転送する"
   },
   "transfer_parcel": {
-    "about_to_transfer": "あなたは{parcel_name}を転送しようとしています。",
+    "about_to_transfer": "あなたは区画{parcel_name}を転送しようとしています。",
     "cant_transfer": "このランドは販売中であるため、転送できません。",
     "transfer_land": "転送ランド"
   }
