update chinese tras

--- a/src/Translation/locales/zh.json
+++ b/src/Translation/locales/zh.json
@@ -19,7 +19,7 @@
     "on_sale": "出售中：",
     "owner": "所有者：{owner}",
     "road": "路",
-    "your_estate": "您的连块土块",
+    "your_estate": "您的连块土地",
     "your_parcel": "您的地块"
   },
   "buy_mana": {
