--- a/src/Translation/locales/zh.json
+++ b/src/Translation/locales/zh.json
@@ -1,6 +1,6 @@
 {
   "activity": {
-    "approve": "您需要先在您的设置页面{settings_link}上授权同意使用 MANA",
+    "approve": "您需要先在您的设置页面 {settings_link} 上授权同意使用 MANA",
     "clear": {
       "body": "一旦您删除了您的交易记录，将不能撤销，确定继续吗？",
       "title": "删除交易记录"
@@ -19,7 +19,7 @@
     "on_sale": "出售中：",
     "owner": "所有者：{owner}",
     "road": "路",
-    "your_estate": "您的地产",
+    "your_estate": "您的连块土地",
     "your_parcel": "您的地块"
   },
   "buy_mana": {
@@ -50,36 +50,34 @@
     "proposal": "提案"
   },
   "derivation_path": {
-    "invalid":
-      "您为钱包设置了错误的派生路径。 您的派生路径必须遵循模式 44'/60|61'/x'/n"
+    "invalid": "您为钱包设置了错误的派生路径。 您的派生路径必须遵循模式 44'/60|61'/x'/n"
   },
   "estate_detail": {
-    "dissolve": "解散遗产",
-    "dissolve_desc": "你将解散庄园{name}",
+    "dissolve": "解散连块土地",
+    "dissolve_desc": "你将解散连块土地 {name}",
     "edit_parcels": "编辑地块",
-    "empty_estate": "庄园{name}已经解散",
-    "maximum_parcels_message":
-      "如果您在单个交易中添加或删除超过{max}的包裹，则可能会耗尽燃气。",
-    "maximum_parcels_title": "您达到了每笔交易的最大包裹数",
+    "empty_estate": "连块土地 {name} 已经解散",
+    "maximum_parcels_message": "如果您在单个交易中添加或删除超过 {max} 个地块，交易费用可能会不足。您可以先提交此交易，然后在编辑连块土地中再增加或删除地块。",
+    "maximum_parcels_title": "您达到了每笔交易的最大土地数",
     "parcels": "包括地块",
-    "pending_tx": "地产"
+    "pending_tx": "连块土地"
   },
   "estate_dissolve": {
-    "too_big": "这个庄园太大了",
-    "too_big_desc": "如果遗产超过{max}包裹，则解散的交易可能会耗尽燃气。"
+    "too_big": "连块土地太大了",
+    "too_big_desc": "如果连块土地超过 {max} 块土地，则解散连块土地的交易有可能引起交易费用不足。您可以在编辑连块土地中移除地块，直到地块少于或等于 {max}， 然后再解散连块土地"
   },
   "estate_edit": {
     "description": "描述",
-    "edit_estate": "编辑地产",
+    "edit_estate": "编辑连块土地",
     "name": "名称",
-    "subtitle": "设置名称和说明，及地产的相关地块。"
+    "subtitle": "设置名称和说明，及连块土地的相关地块。"
   },
   "estate_select": {
-    "description": "在{x}，{y}处选择相邻的地块",
-    "detail": "房地产细节",
+    "description": "选择地块",
+    "detail": "连块土地细节",
     "edit_selection": "在地图上选择宗地",
-    "new_selection": "在地图上选择新地块的地块",
-    "tx_to_be_send": "您将向{action} parcels发送交易：{parcels}"
+    "new_selection": "请在地图上选择新地块",
+    "tx_to_be_send": "您将向 {action} 土块发送交易：{parcels}"
   },
   "footer": {
     "color_key": "图示",
@@ -110,8 +108,8 @@
     "contributions": "小区份额",
     "created_at": "创建于 {date}",
     "edit": "编辑",
-    "estate": "地产",
-    "estates": "地产",
+    "estate": "连块土地",
+    "estates": "连块土地",
     "expired_at": "截止时间 {time}",
     "expires_in": "到期时间 {time}",
     "expires_in_more_than_years": "{years} 年以上到期",
@@ -139,7 +137,7 @@
     "sign_in": "登录",
     "sign_in_notice": "请登录 {sign_in_link} 后访问此页面",
     "submit": "提交",
-    "the_estate": "地产",
+    "the_estate": "连块土地",
     "the_parcel": "包裹",
     "time_left": "剩余时间",
     "transfer_irreversible": "请记住，转让是不可逆转的操作。",
@@ -201,15 +199,12 @@
     "payable": "应付",
     "payable_placeholder": "应付天数",
     "pending_tx": "按揭",
-    "please_authorize_MANA":
-      "请转到{settings_link}并授权Mortgage Helper合同代表您运营MANA",
-    "please_authorize_RCN":
-      "请转到{settings_link}并授权抵押贷款经理合同代表您运营RCN",
+    "please_authorize_MANA": "请转到{settings_link}并授权Mortgage Helper合同代表您运营MANA",
+    "please_authorize_RCN": "请转到{settings_link}并授权抵押贷款经理合同代表您运营RCN",
     "punitory_rate": "惩罚性利率",
     "punitory_rate_placeholder": "惩罚性利率",
     "request": "申请抵押",
-    "request_land":
-      "您将为 {parcel_name} 地块以 {parcel_price} 的价格申请抵押贷款",
+    "request_land": "您将为 {parcel_name} 地块以 {parcel_price} 的价格申请抵押贷款",
     "requested": "已申请"
   },
   "parcel": {
@@ -235,7 +230,7 @@
   "parcel_detail": {
     "actions": {
       "cancel": "取消出售",
-      "create_estate": "建立地产",
+      "create_estate": "创建连块土地",
       "permissions": "权限",
       "sell": "出售",
       "transfer": "转让"
@@ -291,8 +286,7 @@
     "expiration": "到期时间",
     "expiration_placeholder": "待售截止日期",
     "list_land": "地块上架出售",
-    "please_authorize":
-      "您需要在设置页面{settings_link}授权委托虚拟市场以您的名义操作土地交易，然后才能将其上架出售。",
+    "please_authorize": "您需要在设置页面{settings_link}授权委托虚拟市场以您的名义操作土地交易，然后才能将其上架出售。",
     "price": "价格",
     "price_placeholder": "此地块的 MANA 价格",
     "set_land_price": "为 {parcel_name} 设置价格和截止日期"
@@ -327,10 +321,8 @@
     "mortgage_manager_contract": "抵押管理合约",
     "pending_tx": "您有待处理的交易",
     "unauthorize_land_check": "取消勾选取消授权市场合约使用虚拟土地",
-    "you_approved_mortgage_mana":
-      "您已授权{mortgage_contract_link}代表您操作 MANA",
-    "you_approved_mortgage_rcn":
-      "您已授权{mortgage_contract_link}代表您运营 RCN",
+    "you_approved_mortgage_mana": "您已授权{mortgage_contract_link}代表您操作 MANA",
+    "you_approved_mortgage_rcn": "您已授权{mortgage_contract_link}代表您运营 RCN",
     "you_authorized": "您已授权{marketplace_contract_link}以您的名义操作土地"
   },
   "sign_in": {
@@ -338,8 +330,7 @@
     "get_started": "开始使用",
     "intro": "首先，您需要一个安全的地方来保存所有的LAND。",
     "options": {
-      "desktop":
-        "您可以使用{metamask_link}扩展名或像{ledger_nano_link}这样的硬件钱包。",
+      "desktop": "您可以使用{metamask_link}扩展名或像{ledger_nano_link}这样的硬件钱包。",
       "mobile": "您可以使用移动浏览器，如{toshi_link}或{imtoken_link}。"
     }
   },
@@ -351,15 +342,15 @@
     "cancel": "您取消了 {parcel_link} 上的 {publication_link}",
     "cancel_mortgage": "您取消了购买地块 {parcel_link} 的抵押",
     "claim_mortgage_resolution": "您认领了 {parcel_link}",
-    "create_estate": "您创建了地产 {name}",
+    "create_estate": "您创建了连块土地 {name}",
     "create_mortgage": "您要求抵押以购买地块 {parcel_link}",
+    "delete_estate": "您删除了连块土地{name}",
     "disapproved": "您未授权{marketplace_contract_link}以您的名义操作 MANA",
-    "dissolve_estate": "你解散了庄园{name}",
+    "dissolve_estate": "你解散了连块土地 {name}",
     "edit": "您编辑了{parcel_link}地块的名称\"{name}\"和描述\"{description}\"",
-    "edit_estate_metadata":
-      "您编辑了地产{estate_id}，名称为“{name}”，描述为“{description}”",
-    "edit_estate_parcels_added": "您将 {amount} 地块添加到地产 {name}",
-    "edit_estate_parcels_removed": "您从地产 {name} 中删除了 {amount} 地块",
+    "edit_estate_metadata": "您编辑了连块土地 {estate_id}，名称为“{name}”，描述为“{description}”",
+    "edit_estate_parcels_added": "您将 {amount} 地块添加到连块土地 {name}",
+    "edit_estate_parcels_removed": "您从连块土地 {name} 中移除了 {amount} 地块",
     "manage": "您授权{address_link}更新{parcel_link}上的内容",
     "manage_revoked": "您撤销了允许{address_link}更新{parcel_link}内容的授权",
     "mortgage_mana": "您{action} {mortgage_contract_link}代表您操作 MANA。",
@@ -374,8 +365,7 @@
       "please_confirm": "请确认交易"
     },
     "parcel": {
-      "still_pending":
-        "{parcel_name} 仍然有 {transactions_count} 个待处理的交易。"
+      "still_pending": "{parcel_name} 仍然有 {transactions_count} 个待处理的交易。"
     },
     "see_activity": "要查看您的交易记录，请访问 {activity_link}。",
     "text": {
@@ -384,8 +374,8 @@
     }
   },
   "transfer_estate": {
-    "about_to_transfer": "您即将转让地产 {name}。",
-    "transfer_estate": "转让地产"
+    "about_to_transfer": "您即将转让连块土地 {name}。",
+    "transfer_estate": "转让连块土地"
   },
   "transfer_mana": {
     "action": "转帐",
