chore: update Coinbase Wallet link

--- a/src/Translation/locales/en.json
+++ b/src/Translation/locales/en.json
@@ -361,7 +361,7 @@
       "desktop":
         "You can use the {metamask_link} extension or a hardware wallet like {ledger_nano_link}.",
       "mobile":
-        "You can use mobile browsers such as {toshi_link} or {imtoken_link}."
+        "You can use mobile browsers such as {coinbase_link} or {imtoken_link}."
     }
   },
   "transaction": {
