--- a/src/Translation/locales/ja.json
+++ b/src/Translation/locales/ja.json
@@ -82,8 +82,7 @@
     "detail": "エステートの詳細",
     "edit_selection": "地図上の区画を選択する",
     "new_selection": "新しいエステートの区画を地図から選択してください。",
-    "tx_to_be_send":
-      "トランザクションを{action}した区画{parcels}へ送信します。"
+    "tx_to_be_send": "トランザクションを{action}した区画{parcels}へ送信します。"
   },
   "footer": {
     "color_key": "カラーガイド",
@@ -362,7 +361,7 @@
       "desktop":
         "{metamask_link}の拡張機能や{ledger_nano_link}などのハードウェアウォレットを使用できます。",
       "mobile":
-        "{toshi_link}や{imtoken_link}などのモバイルブラウザも使用することができます。"
+        "{coinbase_link}や{imtoken_link}などのモバイルブラウザも使用することができます。"
     }
   },
   "transaction": {
@@ -373,12 +372,10 @@
     "buy": "{parcel_link}を購入しました。",
     "buy_mana": "{mana} MANAを購入しました。",
     "cancel": "{parcel_link}の{publication_link}の公開をキャンセルしました。",
-    "cancel_mortgage":
-      "区画{parcel_link}購入の為の担保をキャンセルしました。",
+    "cancel_mortgage": "区画{parcel_link}購入の為の担保をキャンセルしました。",
     "claim_mortgage_resolution": "{parcel_link}へ請求しました。",
     "create_estate": "あなたはエステート{name}を作成しました",
-    "create_mortgage":
-      "区画{parcel_link}を購入するのに担保を申請しました。",
+    "create_mortgage": "区画{parcel_link}を購入するのに担保を申請しました。",
     "disapproved":
       "あなたは、マーケット上でMANAを使用することを{marketplace_contract_link}で承認していません。",
     "dissolve_estate": "エステート{name}を解散しました。",
@@ -387,7 +384,8 @@
     "edit_estate_metadata":
       "エステート{estate_id}の名称を\"{name}\"に、説明文を\"{description}\"に変更しました。",
     "edit_estate_parcels_added": "エステート{name}に{amount}区画を追加しました",
-    "edit_estate_parcels_removed": "エステート{name}から{amount}区画を取り除いた",
+    "edit_estate_parcels_removed":
+      "エステート{name}から{amount}区画を取り除いた",
     "manage":
       "{parcel_link}のコンテンツを更新する権限を{address_link}に与えました。",
     "manage_revoked":
