--- a/src/Translation/locales/es.json
+++ b/src/Translation/locales/es.json
@@ -78,7 +78,7 @@
       "Establezca un nombre y una descripción, y edite las parcelas de su propiedad."
   },
   "estate_select": {
-    "description": "Seleccione parcelas adyacentes a partir de {x}, {y}",
+    "description": "Seleccione parcelas adyacentes entre sí",
     "detail": "Detalle de finca",
     "edit_selection": "Seleccione las parcelas en el mapa",
     "new_selection": "Seleccione las parcelas en el mapa para su nueva finca",
