--- a/src/Translation/locales/ja.json
+++ b/src/Translation/locales/ja.json
@@ -63,8 +63,7 @@
       "1回のトランザクションで{max}区画を追加または削除すると、ガスがなくなる可能性があります。",
     "maximum_parcels_title":
       "あなたはトランザクションごとに最大の小包に達しました",
-    "parcels": "次の区画を含む",
-    "pending_tx": "このエステート"
+    "parcels": "次の区画を含む"
   },
   "estate_dissolve": {
     "too_big": "このエステートは大きすぎます",
