--- a/src/Translation/locales/es.json
+++ b/src/Translation/locales/es.json
@@ -62,8 +62,7 @@
     "maximum_parcels_message":
       "Si agrega o elimina más de {max} parcelas en una sola transacción, puede quedarse sin gas. Puedes enviar esta transacción y luego agregar o quitar más parcelas en otra transacción editando la propiedad",
     "maximum_parcels_title": "Alcanzaste el máximo de parcelas por transacción",
-    "parcels": "Parcelas incluidas",
-    "pending_tx": "Esta propiedad"
+    "parcels": "Parcelas incluidas"
   },
   "estate_dissolve": {
     "too_big": "Esta propiedad es demasiado grande",
