--- a/src/Translation/locales/fr.json
+++ b/src/Translation/locales/fr.json
@@ -13,7 +13,7 @@
     "start": "Vous êtes en mesure de commencer à négocier au {marketplace}!"
   },
   "address": {
-    "its_you": "C'est toi"
+    "its_you": "C'est vous"
   },
   "atlas": {
     "loading": "Chargement",
@@ -37,8 +37,8 @@
     "title": "Convertir de ETH à MANA"
   },
   "color_key": {
-    "contribution": "Contribution",
-    "district": "Quartiers",
+    "contribution": "Contributions",
+    "district": "Districts",
     "loading": "Chargement",
     "on_sale": "En vente",
     "plaza": "Places",
@@ -319,7 +319,7 @@
     "district": "Quartiers",
     "plaza": "Places",
     "proximity":
-      "{distance} {distance, plural, one {parcelle} other {parcelles}} loin",
+      "{distance} {distance, plural, one {parcelle} other {parcelles}} de distance",
     "road": "Route"
   },
   "profile_page": {
