fix: locations and payload for tx

--- a/src/Translation/locales/en.json
+++ b/src/Translation/locales/en.json
@@ -128,7 +128,7 @@
     "owner_address_warning": "That's already the owner!",
     "paid_at": "Paid at",
     "parcels": "Parcels",
-    "profile": "My Land",
+    "profile": "My LAND",
     "publications": "Publications",
     "recipient_address": "Recipient address",
     "remove": "remove",
